--- a/bindings/pyl7vp/pyl7vp/templates/l7vp.html
+++ b/bindings/pyl7vp/pyl7vp/templates/l7vp.html
@@ -132,6 +132,23 @@
       ReactDOM.render(App, document.getElementById("{{ l7vp.instance_id }}"));
     </script>
     {% endif %}
-
+    <!-- Google Analytics，用于调研分析 L7VP 使用情况，可以删掉 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N97Y9S4GLG" crossorigin></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag("js", new Date());
+      gtag("config", "G-N97Y9S4GLG", { app_type: "pyl7vp-app" });
+    </script>
+    <!-- Baidu tongji，用于调研分析 L7VP 使用情况，可以删掉 -->
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?c2b82edd7b45aa4aa6f9f31c1155db0f";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })()
+    </script>
   </body>
 </html>
