fix: 样式问题处理

--- a/packages/li-editor/src/widgets/LayersPanel/LayerAttribute/BaseFormSchemaField/VisTypeSelect/VisTypeSelect.less
+++ b/packages/li-editor/src/widgets/LayersPanel/LayerAttribute/BaseFormSchemaField/VisTypeSelect/VisTypeSelect.less
@@ -5,6 +5,10 @@
 @prefix-select-cls: ~'@{prefix}-vis-type-select';
 
 .@{prefix-select-cls} {
+  .ant-select-selection-item {
+    height: 30px;
+  }
+
   &__drop-down {
     display: flex;
     flex-wrap: wrap;
