fix: l7vp 模版字符串

--- a/bindings/pyl7vp/pyl7vp/templates/l7vp.html
+++ b/bindings/pyl7vp/pyl7vp/templates/l7vp.html
@@ -17,7 +17,7 @@
       // 高德或 Mapbox 的 token，默认使用内置的 token，生产环境务必自行注册 Token 确保服务稳定!
       const MAP_TOKEN = undefined // 替换为您申请的 token！
       // 如果是高德，在2021年12月02日申请以后的 key 需要配合您的安全密钥一起使用
-      // window._AMapSecurityConfig = { securityJsCode: '替换为您申请的安全密钥！' }
+      // window._AMapSecurityConfig = { securityJsCode: "替换为您申请的安全密钥！" }
     </script>
   </head>
   <body>
