--- a/packages/li-editor/src/widgets/FetchDataset/ProcessingFunction/index.less
+++ b/packages/li-editor/src/widgets/FetchDataset/ProcessingFunction/index.less
@@ -2,15 +2,16 @@
 
 .li-provessing-function {
   &__success-and-err {
+    margin-top: 10px;
+
     &__content {
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
 
-      &-json {
-        height: 80px;
-        background-color: '#1e1e1e';
+      &-js {
         flex: 1;
+        height: 100px;
       }
 
       &-icon {
