chore: 修复主题色

--- a/bindings/pyl7vp/pyl7vp/templates/l7vp.html
+++ b/bindings/pyl7vp/pyl7vp/templates/l7vp.html
@@ -82,7 +82,7 @@
         token: {
           colorPrimary: "#8274FF",
           colorTextBase: "rgba(255,255,255,0.85)",
-          colorBgBase: "#0f0f13",
+          colorBgBase: "#1d1e25",
           colorInfo: "#8274FF",
           borderRadius: 6,
         },
